--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     
     
     <meta charset="utf-8" />
-    <title>Enterprise Shiny Dashboard</title>
+    <title>AmznPrimeDashboard</title>
     <meta name="description" content="Enterprise Shiny Dashboard" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {{ headContent() }}
