--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
           <span class="dashboard-version">{{ appVersion }}</span>
         </h2>
         <div class="dashboard-filters">
-          {{ selectYear }} {{ selectMonth }}
+          {{ selectYear }} {{ selectMonth }} {{previousTimeRange}}
         </div>
       </header>
       <section class="dashboard-panels">
