changed unique nams

--- a/www/index.html
+++ b/www/index.html
@@ -43,19 +43,19 @@
           <span class="dashboard-version">{{ appVersion }}</span>
         </h2>
         <div class="dashboard-filters">
-          {{ selectYear }} {{ selectMonth }} {{previousTimeRange}}
+          {{ downloaddata }} {{ genreporting }} {{sendmail}}
         </div>
       </header>
       <section class="dashboard-panels">
-        <div class="panel panel-metric sales">{{ salesSummary }}</div>
-        <div class="panel panel-metric production">{{ productionSummary }}</div>
-        <div class="panel panel-metric users">{{ usersSummary }}</div>
-        <div class="panel panel-metric complaints">{{ complaintsSummary }}</div>
-        <div class="panel panel-chart chart-time">{{ timeChart }}</div>
-        <div class="panel panel-chart chart-map">{{ countryMap }}</div>
-        <div class="panel panel-chart chart-breakdown">{{ breakdownChart }}</div>
-        <div class="panel panel-chart chart-breakdowns">{{ breakdownCharts }}</div>
-        <div class="panel panel-chart chart-breakdownstwo">{{ breakdownChartstwo }}</div>
+        <div class="panel panel-metric sales">{{ tvShowhits }}</div>
+        <div class="panel panel-metric production">{{ tvShowflops }}</div>
+        <div class="panel panel-metric users">{{ movieHits }}</div>
+        <div class="panel panel-metric complaints">{{ movieFlop }}</div>
+        <div class="panel panel-chart chart-time">{{ countrycontents }}</div>
+        <div class="panel panel-chart chart-map">{{ dataset_react }}</div>
+        <div class="panel panel-chart chart-breakdown">{{ gneresContent }}</div>
+        <div class="panel panel-chart chart-breakdowns">{{ text_analyz }}</div>
+        <div class="panel panel-chart chart-breakdownstwo">{{ pos_neg_words }}</div>
       </section>
     </main>
     <footer class="footer">
